--- a/css/style.css
+++ b/css/style.css
@@ -572,7 +572,70 @@ ul li a:hover{
     font-family: Arial;
 }
 
+.formDoctorAdd2{
+    width: 250px;
+    height: 500px;
+    background:  #16263C;
+    position: absolute;
+    top: -20px;
+    left: 870px;
+    transform: translate(0%,-5%);
+    border-radius: 10px;
+    padding: 25px;
+}
 
+
+.formDoctorAdd2 h2{
+    width: 220px;
+    font-family: sans-serif;
+    text-align: center;
+    color: #ff7200;
+    font-size: 22px;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 2px;
+    padding: 8px;
+}
+
+.formDoctorAdd2 input{
+    width: 240px;
+    height: 35px;
+    background: transparent;
+    border-bottom: 1px solid #ff7200;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif;
+}
+
+.date input{
+    width: 75px;
+    height: 35px;
+    background: transparent;
+    border-bottom: 1px solid #ff7200;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif;
+}
+
+.formDoctorAdd2 input:focus{
+    outline: none;
+}
+
+
+::placeholder{
+    color: #fff;
+    font-family: Arial;
+}
 .formVisitBed{
     width: 250px;
     height: 400px;
